--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import "@fontsource/fira-sans/400.css";
 import "@fontsource/fira-sans/500.css";
 import "@fontsource/fira-sans/700.css";
+import { ViewTransitions } from "astro:transitions";
+
 interface Props {
   title: string;
 }
@@ -18,6 +20,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
   <body class="bg-cream flex flex-col min-h-dvh">
     <header class="border-b-2 px-1 sm:px-8">
@@ -37,27 +40,26 @@ const { title } = Astro.props;
     </header>
 
     <slot />
-  </body>
+  </body><style is:global>
+    @tailwind base;
+    @tailwind components;
+    @tailwind utilities;
+
+    @layer base {
+      html {
+        @apply text-stone-800;
+      }
+      *,
+      ::before,
+      ::after {
+        @apply border-stone-800;
+      }
+    }
+
+    @layer utilities {
+      .gutter {
+        @apply px-3 sm:px-6;
+      }
+    }
+  </style>
 </html>
-<style is:global>
-  @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-
-  @layer base {
-    html {
-      @apply text-stone-800;
-    }
-    *,
-    ::before,
-    ::after {
-      @apply border-stone-800;
-    }
-  }
-
-  @layer utilities {
-    .gutter {
-      @apply px-3 sm:px-6;
-    }
-  }
-</style>
