update title favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const intlFormatter = new Intl.DateTimeFormat("en-SG", {
 });
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout>
   <main class="px-1 flex-1 grid justify-items-center sm:px-8">
     <div class="border-x-2 max-w-6xl w-full">
       <div
