--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import "@fontsource/fira-sans/700.css";
 import { ViewTransitions } from "astro:transitions";
 
 interface Props {
-  title: string;
+  title?: string;
 }
 
 const { title } = Astro.props;
@@ -17,9 +17,9 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Blog from Home" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>{title ? `${title} | the blogfromhome` : "the blogfromhome"}</title>
     <ViewTransitions />
   </head>
   <body class="bg-cream flex flex-col min-h-dvh">
@@ -40,26 +40,27 @@ const { title } = Astro.props;
     </header>
 
     <slot />
-  </body><style is:global>
-    @tailwind base;
-    @tailwind components;
-    @tailwind utilities;
+    <style is:global>
+      @tailwind base;
+      @tailwind components;
+      @tailwind utilities;
 
-    @layer base {
-      html {
-        @apply text-stone-800;
+      @layer base {
+        html {
+          @apply text-stone-800;
+        }
+        *,
+        ::before,
+        ::after {
+          @apply border-stone-800;
+        }
       }
-      *,
-      ::before,
-      ::after {
-        @apply border-stone-800;
-      }
-    }
 
-    @layer utilities {
-      .gutter {
-        @apply px-3 sm:px-6;
+      @layer utilities {
+        .gutter {
+          @apply px-3 sm:px-6;
+        }
       }
-    }
-  </style>
+    </style>
+  </body>
 </html>
