feat: change to github logo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,9 @@ const { title } = Astro.props;
         <span>
           © {new Date().getFullYear()} Darrel
         </span>
-        <a href="https://github.com/darrelhong" class="ms-auto">GitHub</a>
+        <a href="https://github.com/darrelhong" class="ms-auto">
+          <img src="/icons/github-mark.svg" alt="GitHub" class="size-6" />
+        </a>
       </div>
     </footer>
 
