add about page content

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -9,9 +9,20 @@ import Layout from "../../layouts/Layout.astro";
         class="bg-x-orange gutter grid content-center border-b-2 max-h-64 py-20"
       >
         <h1 class="text-3xl sm:text-4xl font-bold text-neutral-100">
-          Coming soon!
+          👋 Hi there!
         </h1>
       </div>
+      <div class="gutter py-8">
+        <div class="prose prose-lg max-w-none font-medium mx-auto">
+          <p>I'm Darrel</p>
+
+          <p>Feel free to read some <a href="/">posts</a>,</p>
+
+          <p>check out some of my work <a href="/projects">here</a>,</p>
+
+          <p>or read more about how I'm a <a href="/bad">bad developer</a>.</p>
+        </div>
+      </div>
     </div>
-  </main></Layout
->
+  </main>
+</Layout>
