--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const { title } = Astro.props;
         <div class="flex items-center border-e-2 px-4 gap-4 font-bold text-lg">
           <a href="/projects">projects</a>
           <a href="/about">about</a>
+          <a href="/bad">bad</a>
         </div>
       </div>
     </header>
